# simple_micro_service_api

inventory/: .env  pyproject.toml
inventory/inventory/: database.py  main.py  services.py
payments/: .env  pyproject.toml
payments/payments/: client.py  database.py  services.py
